Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
 "description": "Super Bot WhatsApp",
 "main": "index.js",
 "type": "module",
-    
+
 "directories": {
 "lib": "lib",
 "src": "src",
 "plugins": "plugins" },
-    
+
 "scripts": {
 "start": "node index.js",
 "qr": "node index.js qr",
 "code": "node index.js code",
 "test": "node test.js",
 "test2": "nodemon index.js" },
-    
+
 "homepage": "https://github.com/AngelPeruFachero/Broly-Bot-MD",
 "author": {
 "name": "AngelPeruFachero" },
-    
+
 "repository": {
 "type": "git",
 "url": "git+https://github.com/AngelPeruFachero/Broly-Bot-MD.git" },
@@ -34,8 +34,12 @@
 "@bochilteam/scraper": "^4.2.4",
 "@brandond/findthelyrics": "^2.0.5",
 "@green-code/music-track-data": "^2.0.3",
+"@nechlophomeriaa/spotifydl": "1.0.11",
 "@sasmeee/igdl":"^1.0.0",
 "@shineiichijo/marika": "^2.0.6",
+"@ibaraki-douji/pixivts": "^2.4.1",
+"@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
+"@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
 "@vitalets/google-translate-api": "^8.0.0",
 "@xct007/frieren-scraper": "^0.0.2",
 "acrcloud": "^1.4.0",
@@ -48,7 +52,7 @@
 "body-parser": "^1.20.2",
 "cfonts": "^3.2.0",
 "chalk": "^5.0.0",
-"cheerio": "^1.0.0-rc.10",
+"cheerio": "npm:cheerio@1.0.0-rc.12", 
 "colors": "^1.4.0",
 "countries-and-timezones": "^3.6.0",
 "country-phone-prefix": "^1.0.1",
@@ -68,7 +72,8 @@
 "lodash": "^4.17.21",
 "lowdb": "^3.0.0",
 "libphonenumber-js": "^1.10.55",
-"module-gatadios": "^1.0.5",
+"megajs": "^1.2.2",
+"module-gatadios": "^1.0.9",
 "md5": "^2.3.0",
 "moment-timezone": "^0.5.34",
 "mongoose": "^6.3.3",
@@ -84,6 +89,7 @@
 "qrcode": "^1.5.0",
 "qrcode-terminal": "^0.12.0",
 "readline": "^1.3.0",
+"ruhend-scraper": "^7.0.4",
 "similarity": "^1.2.1",
 "socket.io": "^4.4.1",
 "spotifydl-x": "^0.3.5",
