Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "Broly-Bot-MD",
+"name": "KatashiBot-MD",
 "version": "1.7.0", 
 "description": "Super Bot WhatsApp",
 "main": "index.js",
@@ -17,16 +17,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
 
-"homepage": "https://github.com/AngelPeruFachero/Broly-Bot-MD",
+"homepage": "https://github.com/KatashiFukushima/KatashiBot-MD",
 "author": {
-"name": "AngelPeruFachero" },
+"name": "KatashiFukushima" },
 
 "repository": {
 "type": "git",
-"url": "git+https://github.com/AngelPeruFachero/Broly-Bot-MD.git" },
+"url": "git+https://github.com/KatashiFukushima/KatashiBot-MD.git" },
 
 "bugs": {
-"url": "https://github.com/AngelPeruFachero/Broly-Bot-MD/issues" },
+"url": "https://github.com/KatashiFukushima/KatashiBot-MD/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
 "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
