--- a/package.json
+++ b/package.json
@@ -17,57 +17,53 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
 
-"homepage": "https://github.com/AngelPeruFachero/Broly-Bot-MD",
+"homepage": "https://github.com/GataNina-Li/Broly-Bot-MD",
 "author": {
 "name": "AngelPeruFachero" },
 
 "repository": {
 "type": "git",
-"url": "git+https://github.com/AngelPeruFachero/Broly-Bot-MD.git" },
+"url": "git+https://github.com/GataNina-Li/Broly-Bot-MD.git" },
 
 "bugs": {
-"url": "https://github.com/AngelPeruFachero/Broly-Bot-MD/issues" },
+"url": "https://github.com/GataNina-Li/Broly-Bot-MD/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
-"@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
-"@adiwajshing/keyed-db": "^0.2.4",
-"@bochilteam/scraper": "^4.2.4",
+"@whiskeysockets/baileys": "github:EdderBot02/bail",
+"@bochilteam/scraper": "^5.0.1",
 "@brandond/findthelyrics": "^2.0.5",
 "@green-code/music-track-data": "^2.0.3",
-"@nechlophomeriaa/spotifydl": "1.0.11",
-"@sasmeee/igdl":"^1.0.0",
 "@shineiichijo/marika": "^2.0.6",
-"@ibaraki-douji/pixivts": "^2.4.1",
-"@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
-"@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
 "@vitalets/google-translate-api": "^8.0.0",
-"@xct007/frieren-scraper": "^0.0.2",
+"@EdderBot02/ytdlf":"github:EdderBot02/ytdlf",
 "acrcloud": "^1.4.0",
-"api-dylux": "^1.5.6",
+"api-dylux": "^1.8.3",
 "express": "^4.18.1",    
 "aptoide-scraper": "^1.0.1",
-"awesome-phonenumber": "^2.68.0",
-"axios": "^1.1.3",
+"@seald-io/nedb": "^4.1.1",
+"archiver": "^7.0.1",
+"awesome-phonenumber": "^3.4.0",
+"axios": "^1.9.0",
 "mathjs": "^11.3.0",
+"p-queue": "^8.1.0",
 "body-parser": "^1.20.2",
-"cfonts": "^3.2.0",
-"chalk": "^5.0.0",
-"cheerio": "npm:cheerio@1.0.0-rc.12", 
+"cfonts": "^3.3.0",
+"chalk": "^5.4.1",
+"cheerio": "1.0.0-rc.12",
 "colors": "^1.4.0",
-"countries-and-timezones": "^3.6.0",
+"countries-and-timezones": "3.6.0",
 "country-phone-prefix": "^1.0.1",
 "express": "^4.17.3",
+"file_size_url":"1.0.4",
 "emoji-country-flags": "^1.0.3",
-"fb-downloader-scrapper": "^1.0.1",
 "file-type": "^17.1.1",
 "fluent-ffmpeg": "^2.1.2",
 "formdata-node": "^4.3.2",
 "fs": "^0.0.1-security",
+"google-libphonenumber": "3.2.38",
 "hispamemes": "^1.0.7",
 "human-readable": "^0.2.1",
-"imagemaker.js": "^2.0.4",
-"instagram-url-direct": "^1.0.12",
-"jsdom": "^19.0.0",
+"jsdom": "^20.0.1",
 "link-preview-js": "^3.0.0",
 "lodash": "^4.17.21",
 "lowdb": "^3.0.0",
@@ -78,6 +74,7 @@
 "moment-timezone": "^0.5.34",
 "mongoose": "^6.3.3",
 "node-fetch": "^3.2.0",
+"node-cache": "^5.1.2",
 "node-gtts": "^2.0.2",
 "node-webpmux": "^3.1.1",
 "node-os-utils": "^1.3.6",
@@ -86,13 +83,13 @@
 "perf_hooks": "^0.0.1",
 "pino": "^7.8.0",
 "pino-pretty": "^7.5.1",
+"performance-now": "^2.1.0",
 "qrcode": "^1.5.0",
 "qrcode-terminal": "^0.12.0",
 "readline": "^1.3.0",
-"ruhend-scraper": "^7.0.4",
 "similarity": "^1.2.1",
 "socket.io": "^4.4.1",
-"spotifydl-x": "^0.3.5",
+"fuzzysort": "^1.0.0", 
 "syntax-error": "^1.4.0",
 "terminal-image": "^2.0.0",
 "url-regex-safe": "^3.0.0",
@@ -101,7 +98,8 @@
 "yargs": "^17.3.1",
 "yt-search": "^2.10.3",
 "google-it": "^1.6.3",
-"ytdl-core": "^4.11.4"
+"@hiudyy/ytdl": "^0.2.3",   
+"ytdl-core": "latest"
 },
 "devDependencies": {
 "eslint": "^8.45.0",
